--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h4>Change 1 was made by Anilreddy for inida </h4>
     <h5>changes 2 was made by anureddy</h5>
     <h6>changes 3 was made by match started</h6>
-    <h7>WT match won by australia</h7>
+    <h7>WT match won by a australia</h7>
     
     
   </body>
